Fix text overflow in code block

--- a/_sass/syntax-fix.scss
+++ b/_sass/syntax-fix.scss
@@ -6,5 +6,11 @@ code.highlighter-rouge {
   pre.highlight {
     padding: 2rem;
     word-break: keep-all;
+    overflow: auto;
+  }
+  @media all and (max-width: 720px){
+    pre.highlight {
+      padding: 1rem;
+    }
   }
 }
